   - Changed version to 2.1.5
   - Bugfix: Checking if a FAM connection is established
   - Bugfix: Threadsafeness of FAM code
   - Bugfix: Retrying monitoring via FAM
   - Copyright message in Credits dialog updated
   - Bugfix: Finally fixed the FAM problem (bug #1221040; thanks to Hubert
        Verstraete for providing a patch)
   - Updated TODO
   - Added Hubert Verstraete to contributors

Version 2.1.4		2005-06-27 22:45
 * Robert Sowada
   - Changed version to 2.1.4
   - Version is now inserted automatically in gnubiff.spec, gnubiff.texi
   - Added "config/mdate-sh" (needed for generating "doc/version.texi")
   - Added "doc/version.texi" (can be updated via "--enable-maintainer-mode")
   - Checked files for incorrect string size type without problems (so all
     files are checked now; see below for files checked for version 2.1.3):
        "src/gnubiff_options.*", "src/gui.*", "src/local.*", "src/options.*",
        "src/socket.*", "src/ui-applet.*", "src/ui-applet-gtk.*",
        "src/ui-authentication.*", "src/ui-certificate.*", "src/ui-popup.*"
        and "src/ui-preferences.*"
   - Cleanup: New class Support (for existing functions in "src/support.cc")
   - Cleanup: Moved parsing of number sequences to "src/support.cc"
   - Bugfix: Don't monitor directory for mh protocol (saves resources)
   - Cleanup of autodetection code for local mailboxes
   - Cleanup of Imap4::command_fetchuid()
   - Cleanup of mh and maildir protocols
   - Feature: Support for mh protocol as used by Sylpheed
   - Bugfix in "src/ui-properties.h" (when no SSL is available)
   - Added include file for FreeBSD
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Very basic support for the Kinyarwanda language (thanks to Steven Michael
        Murphy)
   - Bugfix: Not reading the whole message (mh protocols)
   - Cleanup: FAM error handling via exceptions
   - Bugfix: Race condition when starting monitoring via FAM