@@ -10,7 +10,6 @@ To do:
 - Cleanup Options::update_gui()
 - Fix bugs ;-)
 - Obtaining mails in Popup::update() should be thread safe
-- Popup should not steal keyboard focus (thanks to Wade Berrier for reminding us of this long known bug)
 
 Version 2.2.0:
 --------------
